WebCore/inspector/InspectorStyleSheet.cpp
@@ -135,7 +135,7 @@ PassRefPtr<InspectorObject> InspectorStyle::buildObjectForStyle() const
 {
     RefPtr<InspectorObject> result = InspectorObject::create();
     if (!m_styleId.isEmpty())
-        result->setString("styleId", m_styleId.asString());
+        result->setValue("styleId", m_styleId.asInspectorValue());
 
     RefPtr<InspectorObject> propertiesObject = InspectorObject::create();
     propertiesObject->setString("width", m_style->getPropertyValue("width"));
@@ -576,6 +576,13 @@ InspectorStyleSheet::~InspectorStyleSheet()
     delete m_parsedStyleSheet;
 }
 
+String InspectorStyleSheet::finalURL() const
+{
+    if (m_pageStyleSheet && !m_pageStyleSheet->finalURL().isEmpty())
+        return m_pageStyleSheet->finalURL().string();
+    return m_documentURL;
+}
+
 void InspectorStyleSheet::reparseStyleSheet(const String& text)
 {
     for (unsigned i = 0, size = m_pageStyleSheet->length(); i < size; ++i)
@@ -648,13 +655,8 @@ CSSStyleRule* InspectorStyleSheet::ruleForId(const InspectorCSSId& id) const
         return 0;
 
     ASSERT(!id.isEmpty());
-    bool ok;
-    unsigned index = id.ordinal().toUInt(&ok);
-    if (!ok)
-        return 0;
-
     ensureFlatRules();
-    return index >= m_flatRules.size() ? 0 : m_flatRules.at(index);
+    return id.ordinal() >= m_flatRules.size() ? 0 : m_flatRules.at(id.ordinal());
 
 }
 
@@ -666,7 +668,7 @@ PassRefPtr<InspectorObject> InspectorStyleSheet::buildObjectForStyleSheet()
 
     RefPtr<InspectorObject> result = InspectorObject::create();
     result->setBoolean("disabled", styleSheet->disabled());
-    result->setString("sourceURL", styleSheet->href());
+    result->setString("sourceURL", finalURL());
     result->setString("title", styleSheet->title());
     RefPtr<CSSRuleList> cssRuleList = CSSRuleList::create(styleSheet, true);
     RefPtr<InspectorArray> cssRules = buildArrayForRuleList(cssRuleList.get());
@@ -692,7 +694,7 @@ PassRefPtr<InspectorObject> InspectorStyleSheet::buildObjectForRule(CSSStyleRule
     result->setString("selectorText", rule->selectorText());
     // "sourceURL" is present only for regular rules, otherwise "origin" should be used in the frontend.
     if (!m_origin.length())
-        result->setString("sourceURL", !styleSheet->href().isEmpty() ? styleSheet->href() : m_documentURL);
+        result->setString("sourceURL", finalURL());
     result->setNumber("sourceLine", rule->sourceLine());
     result->setString("origin", m_origin);
 
@@ -700,7 +702,7 @@ PassRefPtr<InspectorObject> InspectorStyleSheet::buildObjectForRule(CSSStyleRule
     if (canBind()) {
         InspectorCSSId id(ruleId(rule));
         if (!id.isEmpty())
-            result->setString("ruleId", id.asString());
+            result->setValue("ruleId", id.asInspectorValue());
     }
 
     RefPtr<CSSRuleSourceData> sourceData;
@@ -771,6 +773,14 @@ bool InspectorStyleSheet::toggleProperty(const InspectorCSSId& id, unsigned prop
     return success;
 }
 
+bool InspectorStyleSheet::text(String* result) const
+{
+    if (!ensureText())
+        return false;
+    *result = m_parsedStyleSheet->text();
+    return true;
+}
+
 CSSStyleDeclaration* InspectorStyleSheet::styleForId(const InspectorCSSId& id) const
 {
     CSSStyleRule* rule = ruleForId(id);
@@ -808,7 +818,7 @@ InspectorCSSId InspectorStyleSheet::ruleOrStyleId(CSSStyleDeclaration* style) co
 {
     unsigned index = ruleIndexByStyle(style);
     if (index != UINT_MAX)
-        return InspectorCSSId::createFromParts(id(), String::number(index));
+        return InspectorCSSId(id(), index);
     return InspectorCSSId();
 }
 
@@ -838,14 +848,6 @@ unsigned InspectorStyleSheet::ruleIndexByStyle(CSSStyleDeclaration* pageStyle) c
 bool InspectorStyleSheet::ensureParsedDataReady()
 {
     return ensureText() && ensureSourceData();
-}
-
-bool InspectorStyleSheet::text(String* result) const
-{
-    if (!ensureText())
-        return false;
-    *result = m_parsedStyleSheet->text();
-    return true;
 }
 
 bool InspectorStyleSheet::ensureText() const
@@ -1084,14 +1086,19 @@ void InspectorStyleSheet::collectFlatRules(PassRefPtr<CSSRuleList> ruleList, Vec
     }
 }
 
-
 InspectorStyleSheetForInlineStyle::InspectorStyleSheetForInlineStyle(const String& id, Element* element, const String& origin)
     : InspectorStyleSheet(id, 0, origin, "")
     , m_element(element)
     , m_ruleSourceData(0)
 {
     ASSERT(element);
-    m_inspectorStyle = InspectorStyle::create(InspectorCSSId::createFromParts(id, "0"), inlineStyle(), this);
+    m_inspectorStyle = InspectorStyle::create(InspectorCSSId(id, 0), inlineStyle(), this);
+}
+
+bool InspectorStyleSheetForInlineStyle::text(String* result) const
+{
+    *result = m_element->getAttribute("style");
+    return true;
 }
 
 bool InspectorStyleSheetForInlineStyle::setStyleText(CSSStyleDeclaration* style, const String& text)
@@ -1101,12 +1108,6 @@ bool InspectorStyleSheetForInlineStyle::setStyleText(CSSStyleDeclaration* style,
     m_element->setAttribute("style", text, ec);
     m_ruleSourceData.clear();
     return !ec;
-}
-
-bool InspectorStyleSheetForInlineStyle::text(String* result) const
-{
-    *result = m_element->getAttribute("style");
-    return true;
 }
 
 Document* InspectorStyleSheetForInlineStyle::ownerDocument() const
@@ -1131,7 +1132,7 @@ bool InspectorStyleSheetForInlineStyle::ensureParsedDataReady()
 
 PassRefPtr<InspectorStyle> InspectorStyleSheetForInlineStyle::inspectorStyleForId(const InspectorCSSId& id)
 {
-    ASSERT_UNUSED(id, id.ordinal() == "0");
+    ASSERT_UNUSED(id, !id.ordinal());
     return m_inspectorStyle;
 }
 
